New edits to html and css files

--- a/style.css
+++ b/style.css
@@ -1,48 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
-*{
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+body{
     margin:0;
     padding:0;
-    font-family: 'Lora', serif;
+    font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
-    background-color: black;
-}
+    background-image: linear-gradient(#110022, #420042);}
 
-#header{
+#front-page{
     width: 100%;
     height: 100vh;
-    background-image: url(1590958887505.jpeg);
     background-size: cover;
     background-position: center;
 }
 
 #homepage{
-    color: white;
+    color: #e6a1d7;
     font-size: 30px;
+    background-color: transparent;
     text-decoration: none;
 }
 
 nav{
-    background-color: black;
-    color: white;
     padding-left: 30px;
     padding-right: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 nav ul li {
     display: inline-block;
-    margin: 5px 10px;
+    margin: 15px 12px;
 }
 
 nav ul li a {
-    color: white;
-    text-decoration: none;
+    color: #e6a1d7;
     font-size: 15px;
+    text-decoration: none;
 }
 
 li a:hover {
@@ -55,12 +50,12 @@ position: relative;
 
 }
 li a:after {
-border-radius: 1em;
-border-top: .1em solid white;
+border-radius: em;
+border-top: 0.15em solid #e6a1d7;
 content: "";
 position: absolute;
     right: 100%;
-    bottom: .2px;
+    bottom: -3px;
     left: 0;
 transition: right 0.5s cubic-bezier(0.25,0.5,0,1);
 }
@@ -70,14 +65,15 @@ right: 0;
 }
 
 #self-intro1{
-    color: white;
+    color: bisque;
     font-size: 3rem;
-    padding: 5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
     background-color: transparent;
 }
 
 #self-intro2{
-    color: white;
+    color: bisque;
     text-align: center;
 }
 .wave {
@@ -98,3 +94,6 @@ right: 0;
      60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
     100% { transform: rotate( 0.0deg) }
   }
+
+  #about{
+color: bisque;  }
