--- a/style.css
+++ b/style.css
@@ -6,32 +6,33 @@ body{
     box-sizing: border-box;
     background-image: linear-gradient(#110022, #420042);}
 
-#front-page{
+.front-page{
     width: 100%;
     height: 100vh;
     background-size: cover;
     background-position: center;
 }
 
-#homepage{
+.name{
     color: #e6a1d7;
     font-size: 30px;
+    margin: 1rem 1rem;
     background-color: transparent;
     text-decoration: none;
 }
 
 nav{
-    padding-left: 30px;
-    padding-right: 30px;
+    color: #e6a1d7;
+    padding-left: 25px;
+    padding-right: 25px;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
 
 nav ul li {
     display: inline-block;
-    margin: 15px 12px;
+    margin: 1rem 1rem;
 }
 
 nav ul li a {
@@ -64,18 +65,12 @@ li a:hover:after {
 right: 0;
 }
 
-#self-intro1{
+.self-intro1 {
     color: bisque;
     font-size: 3rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    background-color: transparent;
+    margin: 2.5rem;
 }
 
-#self-intro2{
-    color: bisque;
-    text-align: center;
-}
 .wave {
     animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
     animation-duration: 2.5s;        /* Change to speed up or slow down */
